I added the build.sh and run.sh. Now I got to find a way to test it without GUIs